fix arrow position on mobile

--- a/atmos-no-cms/src/pages/Markets.css
+++ b/atmos-no-cms/src/pages/Markets.css
@@ -63,9 +63,9 @@
   color: #fff;
 }
 
-@media screen and (max-width: 480px) {
+@media (max-width: 640px){ 
     .market__arrow {
-        top: 85% !important;
+        top: 80% !important;
     }
 }
 
